# Presentation_CMake

./: .gitignore  Presentation_CMake.odp  README.md  docker-compose.yml
app/: CMakeLists.txt
app/src/: main.cpp
app/static_lib/: CMakeLists.txt
app/static_lib/inc/static_lib/: hello.hpp
app/static_lib/src/: hello.cpp
docker/: Dockerfile
